[workspace]
resolver = "2"
members = [
    "nimbus",
    "nimbus-core",
    "nimbus-codec",
    "nimbus-transport",
    "nimbus-macros",
    "nimbus-middleware",
    "nimbus-discovery",
    "examples/hello-world",
]

# Root package for benchmarks
[package]
name = "nimbus-bench"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
criterion = { workspace = true }
nimbus = { workspace = true }
nimbus-core = { workspace = true }
nimbus-codec = { workspace = true }
nimbus-transport = { workspace = true }
rkyv = { workspace = true }
ntex-bytes = { workspace = true }
ntex-codec = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Brandon McMillan"]
repository = "https://github.com/brandon/nimbus"
description = "Blazing-fast, zero-copy RPC framework built in Rust"
keywords = ["rpc", "networking", "async", "zero-copy", "rkyv"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
# Internal crates
nimbus = { path = "nimbus" }
nimbus-core = { path = "nimbus-core" }
nimbus-codec = { path = "nimbus-codec" }
nimbus-transport = { path = "nimbus-transport" }
nimbus-macros = { path = "nimbus-macros" }
nimbus-middleware = { path = "nimbus-middleware" }
nimbus-discovery = { path = "nimbus-discovery" }

# Serialization - rkyv for zero-copy
rkyv = { version = "0.8.12", features = ["little_endian", "bytecheck"] }

# Networking - ntex async framework
ntex = { version = "2.17.0", default-features = false }
ntex-bytes = "1.0.0"
ntex-codec = "1.0.0"
ntex-io = "3.0.0"
ntex-connect = "1.1.0"
ntex-tls = "3.0.0"
ntex-service = "3.7.2"
ntex-util = "3.2.0"

# Async utilities
futures = "0.3.31"
futures-core = "0.3.31"
futures-timer = "3.0.3"
pin-project-lite = "0.2.16"
async-stream = "0.3.6"
tokio = { version = "1.48.0", features = ["sync", "time"] }

# Error handling
thiserror = "2.0.17"

# Observability
tracing = "0.1.43"

# Concurrency
parking_lot = "0.12.5"
dashmap = "6.1.0"
async-lock = "3.4.1"
async-broadcast = "0.7.2"

# Proc macro utilities (for nimbus-macros)
syn = { version = "2.0.111", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

# DNS resolution (for nimbus-discovery)
hickory-resolver = "0.25.2"

# TLS support (for nimbus-transport)
rustls = "0.23"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# Testing and benchmarking
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rand = "0.9.2"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = true
codegen-units = 1

# Benchmarks
[[bench]]
name = "codec"
harness = false

[[bench]]
name = "frame"
harness = false

[[bench]]
name = "pool"
harness = false

[[bench]]
name = "mux"
harness = false

[[bench]]
name = "throughput"
harness = false
