[package]
name = "nimbus-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Service discovery for the Nimbus RPC framework"
keywords = ["rpc", "service-discovery", "dns"]
categories = ["network-programming"]

[features]
default = ["dns"]
dns = ["hickory-resolver"]
registry = ["async-broadcast"]

[dependencies]
nimbus-core.workspace = true
ntex.workspace = true
futures.workspace = true
futures-core.workspace = true
hickory-resolver = { workspace = true, optional = true }
async-broadcast = { workspace = true, optional = true }
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
ntex = { version = "2.17.0", features = ["tokio"] }
