[package]
name = "nimbus-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc macros for the Nimbus RPC framework (#[service] attribute)"
keywords = ["rpc", "macros", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true

[dev-dependencies]
