[package]
name = "nimbus-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Middleware and interceptors for the Nimbus RPC framework"
keywords = ["rpc", "middleware", "interceptor"]
categories = ["network-programming"]

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
nimbus-core.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
